@@ -1,0 +1,21 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=5
+
+PYTHON_COMPAT=( python{2_5,2_6,2_7} )
+inherit distutils-r1
+
+DESCRIPTION="A SDK interface to oVirt Virtualization"
+HOMEPAGE="http://www.ovirt.org/wiki/SDK"
+SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
+
+LICENSE="Apache-2.0"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+DEPEND="${PYTHON_DEPS}
+	>=dev-python/lxml-2.2.3"
+RDEPEND="${DEPEND}"
